# passmr

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  kvs.rs  main.rs  ui.rs
