[package]
name = "passmr"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clipboard = "0.5.0"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.24.0"
sled = "0.34.7"
